# backend/routes/error-codes.js
@@ -1,0 +1,13 @@
+const ApiErrorCode = Object.freeze({
+    INVALID_MOBILE: "INVALID_MOBILE",
+    INVALID_PASSWORD: "INVALID_PASSWORD",
+    MOBILE_ALREADY_REGISTERED: "MOBILE_ALREADY_REGISTERED",
+    INCORRECT_MOBILE_PWD: "INCORRECT_MOBILE_PWD",
+    INCORRECT_VERIFY_CODE: "INCORRECT_VERIFY_CODE",
+    TOO_MANY_REQUESTS: "TOO_MANY_REQUESTS",
+    INVALID_TOKEN: "INVALID_TOKEN",
+    MISSING_AUTH_HEADER: "MISSING_AUTH_HEADER",
+    INTERNAL_SERVER_ERROR: "INTERNAL_SERVER_ERROR"
+  });
+
+  module.exports = {ApiErrorCode};
