# backend/routes/utils.js
@@ -1,0 +1,9 @@
+function sendErrorResponse(res, statusCode, errorCode, message) {
+  res.status(statusCode).json({
+    success: false,
+    errorCode,
+    message,
+  });
+}
+
+module.exports = { sendErrorResponse };
